Fixed layout issues on mobile browsers.

--- a/src/css/navigation.scss
+++ b/src/css/navigation.scss
@@ -80,7 +80,6 @@
 	background-color: var(--color-main-background-blur);
 	backdrop-filter: var(--filter-background-blur);
 	-webkit-backdrop-filter: var(--filter-background-blur);	-webkit-user-select: none;
-	position: sticky;
 	height: 100%;
 	-moz-user-select: none;
 	-ms-user-select: none;
